--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -1,5 +1,8 @@
+body{
+    overflow: hidden;
+}
 :root {
-    --p-primary-50: #ecfdf5;
+    /* --p-primary-50: #ecfdf5;
     --p-primary-100: #d1fae5;
     --p-primary-200: #a7f3d0;
     --p-primary-300: #6ee7b7;
@@ -8,8 +11,8 @@
     --p-primary-600: #059669;
     --p-primary-700: #047857;
     --p-primary-800: #065f46;
-    --p-primary-900: #064e3b;
-    --p-primary-950: #022c22;
+    --p-primary-900: #064e3b;*/
+    --p-primary-950: #022c22; 
     --p-surface-0: #ffffff;
     --p-surface-50: #fafafa;
     --p-surface-100: #f4f4f5;
@@ -27,17 +30,17 @@
 
 /* Light */
 :root {
-    --p-primary-color: var(--p-primary-500);
+    /* --p-primary-color: var(--p-primary-500); */
     --p-primary-contrast-color: var(--p-surface-0);
-    --p-primary-hover-color: var(--p-primary-600);
-    --p-primary-active-color: var(--p-primary-700);
+    /* --p-primary-hover-color: var(--p-primary-600);
+    --p-primary-active-color: var(--p-primary-700); */
     --p-content-border-color: var(--p-surface-200);
     --p-content-hover-background: var(--p-surface-100);
     --p-content-hover-color: var(--p-surface-800);
     --p-highlight-background: var(--p-primary-50);
-    --p-highlight-color: var(--p-primary-700);
+    /* --p-highlight-color: var(--p-primary-700);
     --p-highlight-focus-background: var(--p-primary-100);
-    --p-highlight-focus-color: var(--p-primary-800);
+    --p-highlight-focus-color: var(--p-primary-800); */
     --p-text-color: var(--p-surface-700);
     --p-text-hover-color: var(--p-surface-800);
     --p-text-muted-color: var(--p-surface-500);
@@ -47,10 +50,10 @@
 /* Dark */
 @media (prefers-color-scheme: dark) {
     :root {
-        --p-primary-color: var(--p-primary-400);
+        /* --p-primary-color: var(--p-primary-400);
         --p-primary-contrast-color: var(--p-surface-900);
         --p-primary-hover-color: var(--p-primary-300);
-        --p-primary-active-color: var(--p-primary-200);
+        --p-primary-active-color: var(--p-primary-200); */
         --p-content-border-color: var(--p-surface-700);
         --p-content-hover-background: var(--p-surface-800);
         --p-content-hover-color: var(--p-surface-0);
