--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -2,17 +2,17 @@ body{
     overflow: hidden;
 }
 :root {
-    /* --p-primary-50: #ecfdf5;
-    --p-primary-100: #d1fae5;
-    --p-primary-200: #a7f3d0;
-    --p-primary-300: #6ee7b7;
-    --p-primary-400: #34d399;
-    --p-primary-500: #10b981;
-    --p-primary-600: #059669;
-    --p-primary-700: #047857;
-    --p-primary-800: #065f46;
-    --p-primary-900: #064e3b;*/
-    --p-primary-950: #022c22; 
+    --p-primary-50: #eff6ff;
+    --p-primary-100: #dbeafe;
+    --p-primary-200: #bfdbfe;
+    --p-primary-300: #93c5fd;
+    --p-primary-400: #60a5fa;
+    --p-primary-500: #3b82f6;
+    --p-primary-600: #2563eb;
+    --p-primary-700: #1d4ed8;
+    --p-primary-800: #1e40af;
+    --p-primary-900: #1e3a8a;
+    --p-primary-950: #172554;
     --p-surface-0: #ffffff;
     --p-surface-50: #fafafa;
     --p-surface-100: #f4f4f5;
@@ -30,17 +30,17 @@ body{
 
 /* Light */
 :root {
-    /* --p-primary-color: var(--p-primary-500); */
+    --p-primary-color: var(--p-primary-500);
     --p-primary-contrast-color: var(--p-surface-0);
-    /* --p-primary-hover-color: var(--p-primary-600);
-    --p-primary-active-color: var(--p-primary-700); */
+    --p-primary-hover-color: var(--p-primary-600);
+    --p-primary-active-color: var(--p-primary-700);
     --p-content-border-color: var(--p-surface-200);
     --p-content-hover-background: var(--p-surface-100);
     --p-content-hover-color: var(--p-surface-800);
     --p-highlight-background: var(--p-primary-50);
-    /* --p-highlight-color: var(--p-primary-700);
+    --p-highlight-color: var(--p-primary-700);
     --p-highlight-focus-background: var(--p-primary-100);
-    --p-highlight-focus-color: var(--p-primary-800); */
+    --p-highlight-focus-color: var(--p-primary-800);
     --p-text-color: var(--p-surface-700);
     --p-text-hover-color: var(--p-surface-800);
     --p-text-muted-color: var(--p-surface-500);
@@ -50,10 +50,10 @@ body{
 /* Dark */
 @media (prefers-color-scheme: dark) {
     :root {
-        /* --p-primary-color: var(--p-primary-400);
+        --p-primary-color: var(--p-primary-400);
         --p-primary-contrast-color: var(--p-surface-900);
         --p-primary-hover-color: var(--p-primary-300);
-        --p-primary-active-color: var(--p-primary-200); */
+        --p-primary-active-color: var(--p-primary-200);
         --p-content-border-color: var(--p-surface-700);
         --p-content-hover-background: var(--p-surface-800);
         --p-content-hover-color: var(--p-surface-0);
