--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -12,3 +12,35 @@
 .primary_color_list {
     background: linear-gradient(to bottom, oklch(0.9 0.05 250), white);
 }
+
+
+.wave-btn {
+    position: relative;
+    overflow: hidden;
+ 
+    cursor: pointer;
+  
+    outline: none;
+    transition: background 0.3s ease-in-out;
+  }
+  
+  .wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    animation: waveMove 0.8s ease-out forwards;
+  }
+  
+  @keyframes waveMove {
+    0% {
+      width: 0%;
+      opacity: 0.6;
+    }
+    100% {
+      width: 100%;
+      opacity: 0;
+    }
+  }
