--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -4,9 +4,10 @@ body{
 :root {
     /* --p-primary-50: oklch(0.98 0.01 277.366);
     --p-primary-100: oklch(0.94 0.05 277.366);
-    --p-primary-200: oklch(0.85 0.1 277.366);
+       --p-primary-200: oklch(0.85 0.1 277.366);
     --p-primary-300: oklch(0.75 0.15 277.366);
-    --p-primary-400: oklch(0.65 0.18 277.366); */
+    */
+    --p-primary-400: oklch(0.65 0.18 277.366);
     --p-primary-500: oklch(0.55 0.195 277.366);
     --p-primary-600: oklch(0.45 0.195 277.366);
     --p-primary-700: oklch(0.398 0.195 277.366); /* Your preferred color */
@@ -34,7 +35,7 @@ body{
 :root {
     --p-primary-color: var(--p-primary-700);
     --p-primary-contrast-color: var(--p-surface-0);
-    --p-primary-hover-color: var(--p-primary-700);
+    --p-primary-hover-color: var(--p-primary-400);
     --p-primary-active-color: var(--p-primary-700);
     --p-content-border-color: var(--p-surface-200);
     --p-content-hover-background: var(--p-surface-100);
@@ -54,7 +55,7 @@ body{
     :root {
         --p-primary-color: var(--p-primary-700);
         --p-primary-contrast-color: var(--p-surface-900);
-        --p-primary-hover-color: var(--p-primary-700);
+        --p-primary-hover-color: var(--p-primary-400);
         --p-primary-active-color: var(--p-primary-700);
         --p-content-border-color: var(--p-surface-700);
         --p-content-hover-background: var(--p-surface-800);
