--- a/assets/styles/primevue/accordion.css
+++ b/assets/styles/primevue/accordion.css
@@ -3,7 +3,7 @@
 }
 
 .p-accordionheader {
-    @apply cursor-pointer disabled:cursor-auto flex items-center justify-between p-[1.125rem] font-semibold
+    @apply cursor-pointer disabled:cursor-auto flex items-center justify-between p-[1.125rem] font-normal
         bg-surface-0 dark:bg-surface-900
         text-surface-500 dark:text-surface-400
         transition-colors duration-200
