--- a/assets/styles/primevue/autocomplete.css
+++ b/assets/styles/primevue/autocomplete.css
@@ -75,7 +75,7 @@
 }
 
 .p-autocomplete-option-group {
-    @apply m-0 px-3 py-2 text-surface-500 dark:text-surface-400 font-semibold bg-transparent
+    @apply m-0 px-3 py-2 text-surface-500 dark:text-surface-400 font-normal bg-transparent
 }
 
 .p-autocomplete-input-multiple {
