--- a/assets/styles/primevue/menu.css
+++ b/assets/styles/primevue/menu.css
@@ -43,7 +43,7 @@
 }
 
 .p-menu-submenu-label {
-    @apply bg-transparent px-3 py-2 text-surface-500 dark:text-surface-400 font-semibold
+    @apply bg-transparent px-3 py-2 text-surface-500 dark:text-surface-400 font-normal
 }
 
 .p-menu-separator {
