--- a/assets/styles/primevue/multiselect.css
+++ b/assets/styles/primevue/multiselect.css
@@ -103,7 +103,7 @@
 }
 
 .p-multiselect-option-group {
-    @apply m-0 px-3 py-2 bg-transparent text-surface-500 dark:text-surface-400 font-semibold
+    @apply m-0 px-3 py-2 bg-transparent text-surface-500 dark:text-surface-400 font-normal
 }
 
 .p-multiselect-empty-message {
