--- a/assets/styles/primevue/tabs.css
+++ b/assets/styles/primevue/tabs.css
@@ -44,7 +44,7 @@
 
 .p-tab {
     @apply flex-shrink-0 cursor-pointer select-none relative whitespace-nowrap py-4 px-[1.125rem]
-        border-b border-surface-200 dark:border-surface-700 font-semibold
+        border-b border-surface-200 dark:border-surface-700 font-normal
         text-surface-500 dark:text-surface-400
         transition-colors duration-200 -mb-px
 }
